@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/21
+	* Homun saving won't cap hp/sp to max hp/sp since a homun can have higher
+	  hp/sp than the one stated in the db (due to skill bonuses or status
+	  changes) [Skotlex]
 	* Cleaned up some more the regen_data structure, so that
 	  skill/sitting-skill related data is optional (since only players have it).
 	  [Skotlex]
